--- a/index.html
+++ b/index.html
@@ -36,14 +36,7 @@
 							<i class="far fa-clock"></i>
 						</div>
 						<div class="indicator__name">Слов в минуту:</div>
-						<div class="indicator__value">-</div>
-					</div>
-					<div class="indicator">
-						<div class="indicator__icon">
-							<i class="far fa-clock"></i>
-						</div>
-						<div class="indicator__name">Реальных слов в минуту:</div>
-						<div class="indicator__value">-</div>
+						<div class="indicator__value" id="WordsPerMinute">0</div>
 					</div>
 					<div class="indicator">
 						<div class="indicator__icon indicator__icon--errors">
@@ -79,7 +72,7 @@
 				<div>
 					<div class="line line-1">
 					<span class="done"> На переднем плане, прямо перед</span>
-					<span class="hint">н</span>ами, расположен был дворик, где стоял
+					<span id="Failed" class="hint">н</span>ами, расположен был дворик, где стоял
 				</div>
 				<div class="line">
 					наполовину вычищенный автомобиль. Шофер Остин был на этот раз
